Fixed whitespace (BIDR-133)

--- a/bidr/static/less/agency.less
+++ b/bidr/static/less/agency.less
@@ -247,7 +247,7 @@ header {
 /* Global Section Styles */
 
 section {
-    padding: 100px 0;
+    padding: 40px 0;
     h2.section-heading {
 		font-size: 40px;
 		margin-top: 0;
@@ -265,7 +265,7 @@ section {
 
 @media(min-width:768px) {
 	section {
-		padding: 150px 0;
+		padding: 40px 0;
 	}
 }
 
